@@ -1,4 +1,5 @@
-debian/tmp/usr/bin/siduxcc-gtk2                             usr/bin/
-debian/tmp/usr/bin/sidux-hermes-gtk2                        usr/bin/
-debian/tmp/usr/share/applications/kde/siduxcc-gtk2.desktop  usr/share/applications/
-debian/tmp/usr/share/siduxcc/gtk2                           usr/share/siduxcc/
+debian/tmp/usr/bin/siduxcc-gtk2                                  usr/bin/
+debian/tmp/usr/bin/sidux-hermes-gtk2                             usr/bin/
+debian/tmp/usr/share/applications/kde/siduxcc-gtk2.desktop       usr/share/applications/
+debian/tmp/usr/share/applications/kde/sidux-hermes-gtk2.desktop  usr/share/applications/
+debian/tmp/usr/share/siduxcc/gtk2                                usr/share/siduxcc/
