@@ -1,5 +1,5 @@
 # application
-xdg_apps_DATA = siduxcc-gtk2.desktop
+xdg_apps_DATA = siduxcc-gtk2.desktop sidux-hermes-gtk2.desktop
 bin_SCRIPTS = siduxcc-gtk2 sidux-hermes-gtk2
 
 sharedir = $(pkgdatadir)
