@@ -1,0 +1,13 @@
+[Desktop Entry]
+Comment=sidux dist-upgrade alerter
+Comment[de]=sidux dist-upgrade Warner
+Comment[ru]=служба оповещения dist-upgrade
+Encoding=UTF-8
+Exec=sidux-hermes-gtk2
+Icon=siduxcchermes
+Name=Hermes GTK (upgrade sentinel)
+Name[de]=Hermes GTK (upgrade Wächter)
+Name[ru]=Гермес (служба оповещения)
+Categories=Qt;KDE;System;
+OnlyShowIn=KDE;
+Type=Application
