@@ -1,8 +1,12 @@
 siduxcc (0.10.8) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 04 Jun 2008 00:08:57 +0200
+  [ Fabian Wuertz ]
+  * sidux-hermes-gtk2.desktop added
+
+ -- Fabian Wuertz <xadras@sidux.com>  Wed, 04 Jun 2008 14:52:13 +0200
 
 siduxcc (0.10.7) unstable; urgency=low
 
